<resources>
    <string name="app_name">IQQUIZ</string>
    <string name="welcome">Welcome, Name</string>
    <string name="are_you_smarter_than_the_average_person">Are you smarter than the average person?</string>
    <string name="begin_iq_test">Begin IQ Test</string>
    <string name="did_you_know">Did you know?</string>
    <string name="your_gender_can_greatly_influence_your_iq_results">Your gender can greatly influence your IQ results!</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="watch">watch</string>
    <string name="question_1">Question 1</string>
    <string name="iq">IQ</string>
    <string name="proceed">continue</string>
    <string name="next">next</string>
    <string name="next_2">next</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">question 3</string>
    <string name="hmm_mathematics">hmm, mathematics!!!</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="ready_for_some_fun">Ready for some fun?</string>
    <string name="what_is_your_color_perception_iq">What is your color perception IQ?</string>
    <string name="choose_the_different_text_color">Choose the different text color</string>
    <string name="pick_me">pick me!</string>
    <string name="pick_me_2">pick me!</string>
    <string name="pick_me_3">pick me!</string>
    <string name="pick_me_4">pick me!</string>
    <string name="how_many_circles_do_you_see_in_the_picture_below">How many circles do you see in the picture below?</string>
    <string name="minus_">-</string>
    <string name="plus_">+</string>
    <string name="_0">0</string>
    <string name="just_do_the_math">Just do the math</string>
    <string name="question_5">question 5</string>
    <string name="fields_of_chemistry">Fields of Chemistry</string>
    <string name="carbon_dioxide_co2_contains">Carbon Dioxide, CO2, contains …</string>
    <string name="choose_the_correct_answers">Choose the correct answers</string>
    <string name="carbon_c">Carbon C</string>
    <string name="sodium_na">Sodium Na</string>
    <string name="oxygen_o">Oxygen O</string>
    <string name="iron_fe">Iron Fe</string>
    <string name="logical_sequence">Logical Sequence</string>
    <string name="directions_to_solve">Directions to Solve</string>
    <string name="arrange_the_words_given_below_in_a_meaningful_sequence">Arrange the words given below in a meaningful sequence.</string>
    <string name="a_5_1_2_4_3">A. 5, 1, 2, 4, 3</string>
    <string name="b_4_2_1_5_3">B. 4, 2, 1, 5, 3</string>
    <string name="c_1_3_2_4_5">C. 1, 3, 2, 4, 5</string>
    <string name="d_1_2_3_5_4">D.\t1, 2, 3, 5, 4</string>
    <string name="_1_key_2_door_3_lock_4_room_5_switch_on">1. Key 2. Door 3. Lock 4. Room 5. Switch on</string>
    <string name="question_4">question 4</string>
    <string name="final_step">Final Step</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="brain">brain</string>
    <string name="do_you_want_to_see_how_well_you_did">Do you want to see how well you did?</string>
    <string name="find_out_now">Find out now</string>
    <string name="submit_your_answers">submit your answers</string>
    <string name="check_your_score">Check your score</string>
    <string name="your_score_is">Your score is:</string>
    <string name="share">Share</string>
    <string name="scoreMessage">\u0020Congratulations, your SCORE at IQ QUIZ is\u0020</string>
    <string name="submit">Submit</string>
</resources>
