<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="24dp"
            android:paddingLeft="8dp"
            android:paddingRight="24dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp">


            <ImageView
                android:id="@+id/watch1"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/watch"
                android:src="@drawable/watch" />

            <TextView
                android:id="@+id/final_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/final_step"
                android:textAllCaps="true"
                android:textColor="#03A9F4"
                android:textSize="32sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20pt"
            android:text="@string/congratulations"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/innovation"
            android:contentDescription="@string/brain" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/your_score_is"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:isIndicator="true" />


        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="32dp"
            android:background="#64B5F6"
            android:padding="8dp"
            android:onClick="shareResults"
            android:text="@string/share"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
